# emlib

./: .execute.jlink  .gdbinit  .gitignore  .gitmodules  .travis.install.deps.sh  .travis.yml  Cargo.toml  Makefile  Makefile.emlib  Makefile.rustlib  README.md  buttons_int.rs  thumbv7m-none-eabi.json
emdrv/: gpiointerrupt.c
emlib/: mod.rs
example/: main.rs
examples/: boxes.rs  buttons.rs  buttons_int.rs  cmd_parse.rs  dk_usart.rs  dma.rs  energy_modes.rs  flash.rs  game.rs  i2c.rs  interrupt_hub.rs  joystick.rs  leuart.rs  light_measure.rs  light_sense.rs  rtc_blink.rs  ruter.rs  timer.rs  uart.rs  uart_flash_store.rs  usart.rs  vec.rs
projects/#/: main.rs  ruter.js
projects/game/: display.rs  dkpad.rs  game.rs  gamepad.rs  graphics.rs  tdtpad.rs  utils.rs
projects/tracker/: SensorTracker.rs  buffer.rs  circular_buffer.rs  fixed_size_vector.rs  hr_temp.rs  internal_temperature.rs  ram_store.rs  sensor.rs  temperature.rs
src/: kits.rs  lib.rs  modules.rs
src/acmp/: get_acmp.c  mod.rs
src/adc/: adc.c  adc.h  get_adc.c  mod.rs
src/chip/: chip.c
src/cmsis/: cmsis.c  itm.rs  mod.rs  nvic.rs
src/cmu/: mod.rs
src/dk/: bsp.rs  mod.rs
src/dk/bc/: get_bc_register.c  mod.rs
src/dma/: dma.c  mod.rs
src/ebi/: ebi.c  mod.rs
src/emdrv/: flash.rs  gpioint.rs  i2c.rs  i2c1drv.c  i2c1drv.h  i2c1drvconfig.h  i2cdrvconfig.h  mod.rs  tft.rs
src/emlib/: chip.rs  gpio.c
src/emu/: emu.c  mod.rs
src/gpio/: mod.rs
src/i2c/: i2c.c  mod.rs
src/irq/: irq.c  mod.rs
src/kits/: mod.rs
src/lcd/: lcd.c
src/lesense/: lesense.c  lesense.h  mod.rs
src/leuart/: get_leuart.c  leuart.c  leuart.h  mod.rs
src/modules/: adc.rs  dma.rs  gpio.rs  mod.rs  usart.rs
src/modules/irq/: mod.rs
src/prs/: mod.rs
src/rtc/: mod.rs  rtc.c
src/sensors/: mod.rs  si7013.rs
src/stk/: bsp.rs  io.rs  mod.rs
src/stk/io/: mod.rs
src/timer/: get_timer.c  mod.rs  timer.c  timer.h
src/usart/: mod.rs  usart.c
src/utils/: cmdparse.rs  lang_items.rs  mem.rs  mod.rs
test/: Makefile  README.md  cmock.yml  run_all_tests.rs  test.rs  timer-mock.c  timer.c  timer.rs
test/tests/: adc.c  adc.rs  mod.rs  timer.c  timer.rs
test/util/: usart_print.c
